kubernetes/apps/database/postgres/cluster/mirror.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres-backup-mirror
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: postgres-backup-mirror
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - { port: "53", protocol: TCP }
            - { port: "53", protocol: UDP }
    - toCIDR: [10.25.13.65/32]
      toPorts:
        - ports:
            - { port: "9000", protocol: TCP }
    - toFQDNs:
        - matchPattern: "*.r2.cloudflarestorage.com"
      toPorts:
        - ports:
            - { port: "443", protocol: TCP }
